# sunny-strides

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  scripts.py
.github/workflows/: weekly-email.yml
config/: airflow.cfg
scripts/: processor.py
src/sunnystrides/: constants.py  helpers.py  processor.py
