[tool.poetry]
name = "sunnystrides"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [
    { include = "sunnystrides", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
pandas-stubs = "*"
types-requests = "*"
isort = "*"


[tool.poetry.scripts]
typecheck = "scripts:typecheck"
check_imports = "scripts:check_imports"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"